# confinedUAV

./: .gitattributes  .gitignore  .gitmodules  README.md
Data-display-GUI/: GUI link.txt  data_disp_main.py  data_displayer_form.py  data_processor.py  test_main.spec
Data-display-GUI/data/: 3D_ldata.txt  3D_scan.txt  Drone_file_1_ldata.txt  Drone_file_2_ldata.txt  Drone_file_3_ldata.txt  Drone_file_3_scan.txt  circular_ldata.txt  circular_scan.txt  new1_scan.txt  new_2_scan.txt
Data-display-GUI/data/ARTC/: Q  RF_data_1.txt  RF_data_10.txt  RF_data_11.txt  RF_data_14.txt  RF_data_2.txt  RF_data_3.txt  ldata_1.txt  ldata_10.txt  ldata_13.txt  ldata_14.txt  ldata_5.txt  ldata_8.txt  ldata_9.txt  scan_12.txt  scan_14.txt  scan_3.txt  scan_4.txt  scan_5.txt  scan_6.txt  scan_7.txt  scan_8.txt  scan_9.txt
JetsonTX/PTDroneVision_JustRecord/Settings/: DVCamSet_ZED_Param.yml
JetsonTX/PTDroneVision_JustRecord/include/: Coms.h  DV.h  EKLF.h
JetsonTX/PTDroneVision_JustRecord/src/: DV.cpp  EKFL.cpp  main.cpp
JetsonTX/PTDroneVision_RecordData/: CMakeLists.txt
JetsonTX/PTDroneVision_RecordData/include/: DV.h
JetsonTX/PTDroneVision_RecordData/src/: Coms.cpp  DV.cpp  main.cpp
JetsonTX/stereo_log/: CMakeLists.txt
JetsonTX/stereo_log/src/: camera.cpp
Q4/: Q4.cbp  Q4.depend  Q4.layout  main.cpp  scan_15.txt
Q4/New/: ldata_2.txt  ldata_3.txt
Q4/src/: AP_controller.cpp  AP_controller.h  MedianFilter.h  lidar.cpp  lidar.h  pixhawk_interface.cpp  pixhawk_interface.h  scheduler.cpp  scheduler.h  utility.cpp
Q4/src/mavlink/: serial_port.cpp  serial_port.h
Q4/src/mavlink/message_definitions/: ._ASLUAV.xml
Q4/src/mavlink/nothing_git/: config  index  packed-refs
Q4/src/mavlink/pixhawk/: pixhawk.h
previous_version/Q4/: Q4.cbp  Q4.depend  Q4.layout  main.cpp
previous_version/Q4/New/: ldata_1.txt  scan_5.txt
previous_version/Q4/src/: MSP.cpp  MSP.h  scheduler.cpp  scheduler.h  utility.cpp  utility.h
previous_version/Q4_20_1/: Q4.cbp  Q4.depend  Q4.layout  ldata_15.txt  main.cpp
previous_version/Q4_20_1/src/: control.cpp  lidar.cpp  lidar.h  localisation.cpp  scheduler.cpp  scheduler.h
previous_version/Q4_23_1_2017/: Q4.depend  Q4.layout  main.cpp
previous_version/Q4_23_1_2017/src/: AP_controller.cpp  AP_controller.h  MedianFilter.cpp  lidar.cpp  lidar.h  scheduler.cpp  utility.h
previous_version/Q4_last_cleanflight/: Q4.cbp  Q4.layout
previous_version/Q4_last_cleanflight/src/: AP_controller.cpp  AP_controller.h  MSP.cpp  MSP.h  lidar.cpp  scheduler.cpp  scheduler.h
previous_version/Q4_pix/: Q4.depend  main.cpp
previous_version/Q4_pix/src/: control.h  lidar.cpp  lidar.h  localisation.h  pixhawk_interface.cpp  pixhawk_interface.h  scheduler.cpp
previous_version/Q_11_10_2016/: Q.cbp  Q.depend  Q.layout  main.cpp
previous_version/Q_11_10_2016/custom_header/: MedianFilter.cpp  RF_tag.h  UI.h  controller.h  sock_client.h  sock_com.h
previous_version/Q_11_10_2016/rplidar_sdk/: lidar_interface.cpp  lidar_interface.h
previous_version/Q_11_10_2016/rplidar_sdk/include/: rplidar.h
previous_version/Q_11_10_2016/src/: RF_tag.cpp  UI.cpp  controller.cpp  sock_client.cpp  sock_com.cpp
qav500/ArduLED/: ArduLED.ino
qav500/ArduQAV/: ArduQAV.ino  LED.cpp  LED.h
qav500/lib/urg_library-1.2.0/samples/c/: find_port  (+3 more)
qav500/src/: AP_controller.cpp  AP_controller.h  AP_interface.cpp  AP_interface.h  init.cpp  lidar.cpp  lidar.h  mavlink_sp.h  scheduler.cpp  scheduler.h  sock_client.h  utility.cpp  utility.h
swiftlet/ArduUAV/: ArduUAV.ino  LED.cpp  LED.h
swiftlet/OdroidUAV/: CMakeLists.txt
swiftlet/OdroidUAV/lib/Scheduler/: Scheduler.h
swiftlet/OdroidUAV/lib/cserial/: CMakeLists.txt  cSerial.cpp  cSerial.h  example.txt
swiftlet/OdroidUAV/lib/findpeaks/: findpeaks.cpp  findpeaks.h
swiftlet/OdroidUAV/lib/urg_library-1.2.0/samples/c/: calculate_xy  get_multiecho_intensity
swiftlet/OdroidUAV/lib/urg_library-1.2.0/samples/cpp/: get_distance  get_multiecho_intensity
swiftlet/OdroidUAV/src/: UI.cpp  UI.h  common.cpp  common.h  init.cpp  lidar.cpp  lidar.h  localisation.cpp  localisation.h  messenger.cpp  messenger.h  uav.cpp  utility.cpp  utility.h
swiftlet/OdroidUAV/test_log/: log_24_8_morning.txt
swiftlet/src/: AP_controller.cpp  init.cpp  mavlink_sp.cpp  sock_client.cpp
(+10 files in other folders)
